v6.4.0:
- add PATCHIMAGE_DIR new internal directory
- fix telling user path to Hans Files for Pokemon Rutile Ruby
- fix telling user path to Hans Files for Pokemon Star Sapphire
- show full path for Hans Files for all games, instead of relative
- add support for Pokemon Eternal X
  - choose between legal, rebalanced and insanity version
  - for legal and rebalanced, choose whether to nerf first gym leader
- add support for Pokemon Wilting Y
  - choose between legal, rebalanced and insanity version
  - for legal and rebalanced, choose whether to nerf first gym leader

v6.3.0:
- supply ctrtool (32 and 64 bit versions)
- supply 3dstool (32 and 64 bit versions)
- add support for Pokemon Neo X
   - choose between full and lite version
- add support for Pokemon Neo Y
   - choose between full and lite version
- add support for Pokemon Rutile Ruby
  - choose between legit, leveled and 679 build
- add support for Pokemon Star Sapphire
  - choose between legit, leveled and 679 build

v6.2.2:
- when running patchimage from git, use it's tools, scripts and stuff,
  instead of system-wide (if) installed
- simple progress [x/y] visualization for Tokyo Mirage Sessions #FE
- minor internal changes

v6.2.1:
- support for MKWiimm 2016-07
- update MKWiimm 2016-02 to v2
- update Tokyo Mirage Sessions #FE patcher for version
  0.9.4 of the patch
- update szs to 1.52

v6.2.0:
- code improvements for MKWiimm
- supply xdelta3 (32 and 64 bit versions)
- supply titledumper (32 and 64 bit versions), for use with ddd
- add support for Tokyo Mirage Sessions #FE US/EUR decensoring
  - add --xdelta and --cpk parameters
- use ${WIT} instead of wit when checking image region for
  MKWiimm and Kirbys Adventure Wii
- minor internal changes

v6.1.0:
- update szs to version 1.50a
- update title database
- show "Enter ID (...)" message at the end of menu
- show "ID	Name" header/footer in menu
- show proper version number in --help
- support for new MKWiimm config.def variables ID >= 29
  - default set: