@@ -27,21 +27,6 @@ Supported Versions:	US, EU, JAP
 
 }
 
-check_input_rom () {
-
-	if [[ ! ${CXI} ]]; then
-		CXI=$(find . -name ${CXI_MASK} | sed -e 's,./,,')
-		if [[ -f ${CXI} ]]; then
-			CXI=${CXI}
-			RFS=${ROMFS}
-		else
-			echo -e "error: could not find suitable ROM, specify using --rom"
-			exit 15
-		fi
-	fi
-
-}
-
 viola_nerf () {
 
 	echo "
