@@ -1,5 +1,14 @@
 v6.4.0:
-- add PATCHIMAGE_DIR new internal directory
+- add PATCHIMAGE_DIR new internal variable
+- before creating any of the directories defined in ${HOME}/.patchimage.rc
+  check whether the parent directory is writeable, else fallback to ${HOME}
+- new ${HOME}/.patchimage.rc variable PATCHIMAGE_3DS_DIR, global directory
+  where to look for unmodified 3DS ROM files
+- new ${HOME}/.patchimage.rc variable PATCHIMAGE_ROM_DIR, global directory
+  where to store your modified 3DS ROM files
+- make check_input_rom search in both ${PATCHIMAGE_3DS_DIR} and ${PWD}
+- make check_input_rom a common.sh function, prevent duplicated code
+- update README.RC, README.STATUS_CODES, README.GAMEIDS
 - fix telling user path to Hans Files for Pokemon Rutile Ruby
 - fix telling user path to Hans Files for Pokemon Star Sapphire
 - show full path for Hans Files for all games, instead of relative
